--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,11 +12,13 @@ body {
   float: center;
   color: black;
   text-align: center;
-  padding: 40px;
+  padding: 0px;
   text-decoration: none;
-  font-size: 18px;
+  align-content: center;
+  font-size: 20px;
   line-height: 25px;
   border-radius: 4px;
+  font-weight: bolder;
 }
 
 .sidenav {
@@ -74,9 +76,38 @@ body {
   text-align: center;
 }
 
+
+table, th, td {
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid;
+}
+
+
+.sidenav table {
+  width: 100%;
+}
+
+.sidebarnav table th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+
+.sidebarnav table th{
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+
+
+.sidebarnav tr:nth-child(even){background-color: #7d6b6b;}
+
+
 .ol-popup {
   position: absolute;
-  background-color: white;
+  background-color: rgb(229, 212, 212, 0.9);
   padding: 10px;
   border-radius: 10px;
   border: 1px solid black;
